--- a/final.html
+++ b/final.html
@@ -7,6 +7,7 @@
     --primary-color: #ff4081;
     --secondary-color: #fff0f5;
     --accent-color: #ff85a2;
+    --secondary-color2: ##FFC0CB;
     --text-color: #333;
     --light-text: #777;
   }
@@ -14,7 +15,7 @@
     font-family: 'Roboto', sans-serif; 
     margin: 0;
     padding: 0;
-    background-color: var(--secondary-color);
+    background-color: var( --secondary-color2);
     color: var(--text-color);
   }
   header {
